Making Changes to View
Adding Themes
Changing Layout

--- a/HealthServices.Web/Views/Home/Index.cshtml
+++ b/HealthServices.Web/Views/Home/Index.cshtml
@@ -3,9 +3,11 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+    <h1>Buena Heatlh</h1>
+    <p class="lead">
+        Your Health is important to you. You value having infomration at your finger tips. Buena Health is here to help. Never have to depend on a Doctor's office to provide you your information. You can store and retrieve your vital signs and more in your own Personal eHealth Application
+        <em>Your Health Information</em> When <strong>you</strong> want it.
+    </p>
 </div>
 
 <div class="row">
