--- a/HealthServices.Web/Views/Shared/_Layout.cshtml
+++ b/HealthServices.Web/Views/Shared/_Layout.cshtml
@@ -23,13 +23,9 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="nav active">>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li class="nav active">@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li class="nav"><a href="about.html">About</a></li>
-                    <li class="nav"><a href="records.html">Records</a></li>
-                    <li class="nav"><a href="history.html">History</a></li>
-                    <li class="nav"><a href="contact.html">Contact</a></li>
                     @Html.Partial("_LoginPartial")
                 </ul>
             </div>
